<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemes.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#faf2ed"
    android:elevation="20dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edittext"
        android:textAlignment="center"
        app:cardBackgroundColor="#fefefe"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/explore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/explore_yourself"
            android:textColor="@color/grey"
            android:textSize="36sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="135dp"
        android:layout_height="171dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toStartOf="@+id/cardView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/male"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            app:srcCompat="@drawable/male"
            />

        <TextView
            android:id="@+id/Male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:text="@string/male"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="135dp"
        android:layout_height="171dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/female"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            app:srcCompat="@drawable/female" />

        <TextView
            android:id="@+id/Female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="10dp"
            android:text="@string/female"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:textStyle="bold" />

        />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_margin="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_edittext"
        android:textAlignment="center"
        app:cardBackgroundColor="#fefefe"
        app:cardCornerRadius="15dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.443">

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_150"
            android:textColor="@color/grey"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/height"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"

            />

        <TextView
            android:id="@+id/units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="30sp"
            android:text="@string/cm"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="135dp"
        android:layout_height="171dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/calbmi"
        app:layout_constraintEnd_toStartOf="@+id/cardView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/weightcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_50"
            android:textColor="@color/grey"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/Kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="15sp"
            android:text="@string/kg"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/minus"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/minus" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="bottom|right"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/add"
            tools:ignore="RtlHardcoded" />

        /></androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="135dp"
        android:layout_height="171dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/calbmi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView6"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/agecount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_19"
            android:textColor="@color/grey"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/age"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/age"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/yr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="15sp"
            android:text="@string/yr"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/minusage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/minus" />

        <ImageView
            android:id="@+id/addage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="bottom|right"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/add"
            tools:ignore="RtlHardcoded" />



    </androidx.cardview.widget.CardView>

    <android.widget.Button
        android:id="@+id/calbmi"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/dim"
        android:gravity="center"
        android:text="@string/calculate_bmi"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:layout_constraintVertical_bias="0.931" />


</androidx.constraintlayout.widget.ConstraintLayout>