<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gender"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    tools:context=".resultbmi">

    <ImageView
        android:id="@+id/tick"
        android:layout_width="244dp"
        android:layout_height="197dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161"
        app:srcCompat="@drawable/tick" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="372dp"
        android:layout_height="184dp"
        android:background="@drawable/custom_edittext"
        android:foregroundGravity="center_horizontal"
        app:cardCornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tick"
        app:layout_constraintVertical_bias="0.256">


        <TextView
            android:id="@+id/bmires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:text="@string/_60"
            android:textColor="@color/grey"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Gen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/gender"
            android:textColor="@color/grey"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:text="@string/your_bmi_category_is"
            android:textColor="@color/grey"
            android:textSize="32sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <android.widget.Button
        android:id="@+id/test"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/dim"
        android:gravity="center"
        android:text="@string/choose_goal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView8"
        app:layout_constraintVertical_bias="0.817" />

    <TextView
        android:id="@+id/todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:text="You Should Gain Weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

</androidx.constraintlayout.widget.ConstraintLayout>